refatoring based on aws sample example