@@ -5,17 +5,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>
+        <version>3.2.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com</groupId>
     <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>server</name>
-    <description>Sample project to better understand Serve Side Event</description>
+    <description>Sample project to test graalvm on aws lambda</description>
     <properties>
-        <java.version>17</java.version>
-        <aws.spring.java.sdk.version>2.0.0-M1</aws.spring.java.sdk.version>
+        <java.version>21</java.version>
+        <aws.serverless.spring.version>2.0.0</aws.serverless.spring.version>
+        <aws.sdk.java.version>2.24.1</aws.sdk.java.version>
+        <spring-cloud.version>2022.0.5</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -23,7 +25,14 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.22.9</version>
+                <version>${aws.sdk.java.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -33,43 +42,45 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <!-- aws -->
+        <dependency>
+            <groupId>com.amazonaws.serverless</groupId>
+            <artifactId>aws-serverless-java-container-springboot3</artifactId>
+            <version>${aws.serverless.spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-events</artifactId>
+            <version>3.11.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-core</artifactId>
+            <version>1.2.3</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- aws -->
-        <dependency>
-            <groupId>com.amazonaws.serverless</groupId>
-            <artifactId>aws-serverless-java-container-springboot3</artifactId>
-            <version>${aws.spring.java.sdk.version}</version>
-        </dependency>
-        <!-- Platform-specific Linux x86_64 JAR -->
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-runtime-interface-client</artifactId>
-            <version>2.4.1</version>
-        </dependency>
     </dependencies>
 
-<!-- Failed to execute goal org.springframework.boot:spring-boot-maven-plugin:3.1.4:repackage (repackage) on project -->
-<!-- server: Execution repackage of goal org.springframework.boot:spring-boot-maven-plugin:3.1.4:repackage failed: -->
-<!-- Unable to find main class -> [Help 1] -->
-<!-- https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/ -->
+    <!-- Failed to execute goal org.springframework.boot:spring-boot-maven-plugin:3.1.4:repackage (repackage) on project -->
+    <!-- server: Execution repackage of goal org.springframework.boot:spring-boot-maven-plugin:3.1.4:repackage failed: -->
+    <!-- Unable to find main class -> [Help 1] -->
+    <!-- https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/ -->
     <build>
         <plugins>
             <plugin>
@@ -100,7 +111,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <!--                        <version>3.5.1</version>-->
                 <configuration>
                     <filters>
                         <filter>
@@ -154,19 +164,43 @@
                         <artifactId>native-maven-plugin</artifactId>
                         <configuration>
                             <buildArgs>
-                                <arg>--enable-url-protocols=http</arg>
-                                <arg>-H:+AddAllCharsets</arg>
+                                <buildArg>--enable-url-protocols=http --enable-preview -march=compatibility</buildArg>
                             </buildArgs>
                         </configuration>
                         <executions>
                             <execution>
-                                <id>build-native</id>
                                 <goals>
-                                    <goal>compile-no-fork</goal>
+                                    <goal>build</goal>
                                 </goals>
                                 <phase>package</phase>
                             </execution>
+                            <execution>
+                                <id>test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
                         </executions>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>native-zip</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <inherited>false</inherited>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/assembly/native.xml</descriptor>
+                            </descriptors>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
